Update navbar structure and styles
 Changed the text color of favorite products icon to white.
- Updated the icon for favorite products to a heart icon.
- Replaced the placeholder for displaying the user's name with a bold font style.
- Added missing href for the favorite products link.
- Removed the initial badge content in the cart to make it empty by default.

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 </li>
             </ul>
             <div class="ms-auto d-flex align-items-center gap-3">
-                <span class="userNameIn"><strong></strong></span>
+                <span class="userNameIn fw-bold"></span>
 
-                <a href="favorites.html" class="text-dark favProducts">
-                    <i class="fas fa-bookmark"></i>
+                <a href="FavoriteProducts.html" class="text-white  favProducts btn btn-danger">
+                    <i class="far fa-heart"></i>
                 </a>
 
                 <a class="btn btn-outline-dark btn-sm logInBtn" href="Login.html">Login</a>
@@ -81,7 +81,7 @@
                         aria-controls="offcanvasExample" class="cart btn">
                         View Cart
                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                            0
+
                         </span>
                     </a>
                 </div>
