Add rounded class to container
Added the `rounded` class to the main container for improved visual appeal.

--- a/Products.html
+++ b/Products.html
@@ -98,7 +98,7 @@
 <div class="container">
     <div class="row my-4">
         <div class="col-12">
-<div class="banner text-center bg-dark text-white p-4">
+<div class="banner text-center bg-dark text-white p-4 rounded">
     <h5 class="banner-title" style="font-size: 1.75rem;">🌟 Discover Exclusive Offers! 🌟</h5>
     <p class="banner-text" style="font-size: 1.2rem;">
         Don’t miss the chance to get the best limited-time offers on the latest products. Shop now and seize the
